--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -34,4 +39,5 @@ dependencies {
     implementation 'com.android.support:design:25.3.1'
     testImplementation 'junit:junit:4.12'
     testImplementation "org.mockito:mockito-core:2.+"
+    testImplementation "org.robolectric:robolectric:3.8"
 }
